@@ -1,7 +1,6 @@
 package com.microservico_java.mini_spotify.dto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.microservico_java.mini_spotify.model.Playlist;
 
@@ -9,17 +8,18 @@ public record PlaylistResponseDTO(
         Long id,
         String nome,
         String nomeUsuario,
-        List<MusicaDTO> musicas
+        List<MusicaResponseDTO> musicas
 ) {
     public PlaylistResponseDTO(Playlist playlist) {
         this(
             playlist.getId(),
             playlist.getNome(),
-            playlist.getUsuario().getNome(),
-             playlist.getMusicas()
-                    .stream()
-                    .map(MusicaDTO::new)
-                    .collect(Collectors.toList())
+            playlist.getUsuario() != null ? playlist.getUsuario().getNome() : null,
+            playlist.getMusicas() != null ? 
+                playlist.getMusicas().stream()
+                    .map(MusicaResponseDTO::new)
+                    .toList() 
+                : List.of()
         );
     }
 }
